RESOLVED FIXED218106
[Media in GPU Process] in-band metadata cues sometimes crash
https://bugs.webkit.org/show_bug.cgi?id=218106
Summary [Media in GPU Process] in-band metadata cues sometimes crash
Eric Carlson
Reported 2020-10-22 16:15:03 PDT
in-band metadata cues sometimes cause a crash when loaded in the GPU Process
Attachments
Patch (8.32 KB, patch)
2020-10-23 09:10 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2020-10-22 16:15:47 PDT
Eric Carlson
Comment 2 2020-10-23 09:10:10 PDT
EWS
Comment 3 2020-10-23 13:19:56 PDT
Committed r268939: <https://trac.webkit.org/changeset/268939> All reviewed patches have been landed. Closing bug and clearing flags on attachment 412187 [details].
Note You need to log in before you can comment on or make changes to this bug.